alterações e melhorias ao portfolio

--- a/portfolio/templates/portfolio/educacao.html
+++ b/portfolio/templates/portfolio/educacao.html
@@ -5,13 +5,13 @@
         h2 {
             display: flex;
             justify-content: center;
-            color: aliceblue;
+            color: black;
         }
 
         p {
             display: flex;
             justify-content: center;
-            color: aliceblue;
+            color: black;
         }
 
     </style>
