--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -62,12 +62,12 @@
         /* Estilo para a seção about */
         .about {
             padding: 50px;
-            color: aliceblue;
+            color: black;
         }
 
         .about h2 {
             font-size: 36px;
-            color: aquamarine;
+            color: black;
             margin-bottom: 20px;
         }
 
