--- a/portfolio/templates/portfolio/contacto.html
+++ b/portfolio/templates/portfolio/contacto.html
@@ -9,12 +9,12 @@
         #contact h2 {
             font-size: 36px;
             margin-bottom: 20px;
-            color: aliceblue;
+            color: black;
         }
 
         #contact p {
             font-size: 18px;
-            color: aliceblue;
+            color: black;
             margin-bottom: 20px;
         }
 
