--- a/portfolio/templates/portfolio/lista_certificados.html
+++ b/portfolio/templates/portfolio/lista_certificados.html
@@ -13,7 +13,7 @@
 
         button {
             background-color: #007bff;
-            color: #fff;
+            color: black;
             padding: 10px 20px;
             border: none;
             border-radius: 4px;
@@ -21,7 +21,7 @@
         }
 
         h2{
-            color: white;
+            color: black;
         }
 
         .colorful {
