--- a/portfolio/templates/portfolio/projetos.html
+++ b/portfolio/templates/portfolio/projetos.html
@@ -9,14 +9,29 @@
         }
 
         .project {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            background-color: #f2f2f2;
-            padding: 20px;
-            border-radius: 8px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
+
+        .project:hover {
+            transform: translateY(-5px);
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2); /* Altere conforme necessário */
+        }
+
+
+        @keyframes gradientMove {
+            0% {
+                background-position: 0% 50%;
+            }
+            100% {
+                background-position: 100% 50%;
+            }
+        }
+
+        .projects-container:hover .project {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
 
         .project img {
             max-width: 100%;
@@ -34,7 +49,8 @@
             font-size: 14px;
             color: #777;
         }
-         @media (max-width: 767px) {
+
+        @media (max-width: 767px) {
             .projects-container {
                 grid-template-columns: 1fr;
             }
@@ -46,33 +62,56 @@
             <h2>Minesweeper</h2>
             <img src="../../static/portfolio/images/minesweeper.jpg" alt="Minesweeper">
             <p>Minesweeper meu primeiro jogo, foi um projeto feito na cadeira de fundamentos de Programação.</p>
+            <a href="#" class="view-button">Saiba Mais</a>
         </div>
 
         <div class="project">
             <h2>Não te Constipes</h2>
             <img src="../../static/portfolio/images/naoTeConstipes.jpg" alt="Não Te Constipes">
-            <p>Minesweeper meu primeiro jogo, foi um projeto feito na cadeira de fundamentos de Programação.</p>
+            <p>Não Te Constipes é um jogo de tabuleiro para dois jogadores, em que cada jogador tem uma família de 4
+                pessoas:
+                O jogador 1 é dono dos peões identificados pelas letras a, b, ce d.
+                O jogador 2 é dono dos peões identificados pelas letras x, y, ze w.
+                No início do jogo, os 4 peões de cada jogador estão na sua casa mãe, em lados opostos do tabuleiro. A
+                cada jogo, o jogador lança os dados e escolhe apenas um dos seus peões para se movimentar. O peão
+                escolhido, avançou o número de casas que saíram no lançamento dos dados.
+                O objetivo de cada jogador é fazer com que todos os seus 4 jogadores completem uma volta ao tabuleiro.
+                Ganha o primeiro jogador a alcançar esse feito.
+                No entanto, se um peão for ultrapassado por um peão da outra família (peão do jogador oponente), fica
+                constipado e tem de voltar para a sua casa mãe.
+                O peão quando remetido em casa mãe deixa de ficar constipado e pode ser usado normalmente.</p>
+            <a href="#" class="view-button">Saiba Mais</a>
         </div>
 
         <div class="project">
             <h2>Deisiflix</h2>
             <img src="../../static/portfolio/images/deisiflix.jpg" alt="Deisiflix">
-            <p>Descrição do projeto 2.</p>
+            <p>Objetivo: desenvolvimento de uma aplicação em linguagem Java que
+                seja capaz de receber e responder a pedidos de estatísticas sobre uma base de dados de
+                filmes.
+            </p>
+            <a href="#" class="view-button">Saiba Mais</a>
         </div>
 
         <div class="project">
             <h2>Deisi Jungle</h2>
             <img src="../../static/portfolio/images/deisijungle.jpg" alt="Deisiflix">
-            <p>"É um jogo de aventura e competição, ambientado em uma savana distante.
-                Os animais da selva decidem realizar uma série de provas esportivas para determinar quem será coroado como o Rei da Selva.
-                O protagonista, Tarzan, fica sabendo dessa competição e decide participar, confiante em suas habilidades atléticas.
+            <p>Certo dia, numa savana muito (muito) longe daqui, os animais decidiram descobrir quem seria
+                o melhor atleta entre eles. Para o fazer, definiram um conjunto de provas desportivas que iriam
+                disputar entre si - quem vencesse mais provas seria considerado o Rei da Selva. Rapidamente
+                a notícia chegou ao Tarzan, que não quis deixar de participar nas provas, convencido de que
+                facilmente as venceria.
+                A primeira prova a disputar é a prova de atletismo. Os animais vão-se reunir numa pista e
+                competir para determinar qual o melhor atleta.
             </p>
+            <a href="#" class="view-button">Saiba Mais</a>
         </div>
 
         <div class="project">
             <h2>Máquina de Lavar Roupa</h2>
             <img src="../../static/portfolio/images/Arquitetura%20de%20computadores.jpg" alt="Deisiflix">
             <p>Descrição do projeto 2.</p>
+            <a href="#" class="view-button">Saiba Mais</a>
         </div>
     </div>
 {% endblock %}
