--- a/portfolio/templates/portfolio/quiz.html
+++ b/portfolio/templates/portfolio/quiz.html
@@ -7,7 +7,8 @@
         {% for question in questions %}
             <p>{{ question.question_text }}</p>
             {% for choice in question.choice_set.all %}
-                <input type="radio" id="{{ choice.id }}" name="{{ question.id }}" value="{{ choice.id }}">
+                <label for="{{ choice }}"></label><label for="{{ choice}}"></label>
+                <input type="radio" id="{{ choice}}" name="{{ question.id }}" value="{{ choice.id }}">
                 <label for="{{ choice.id }}">{{ choice.choice_text }}</label><br>
             {% endfor %}
         {% endfor %}
